--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,15 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-
-/* 
-
-good for 880px-max
-TODO
-fix: 320 - 980 !!!!!
-fix item 1 for smaller screens
-fix items for smaller screens
-add the dots
-*/
-
 body {
   background-color: hsl(226, 43%, 10%);
   height: 100vh;
@@ -53,7 +42,7 @@ p {
   padding-inline: 1rem;
 }
 .grid-item {
-  border-radius: 5%;
+  border-radius: 1rem;
   background-position: calc(100% - 1rem) -0.5rem;
   background-repeat: no-repeat;
   display: flex;
@@ -62,7 +51,7 @@ p {
   padding: 0;
   align-self: baseline;
 }
-.grid-item:not(.item1):hover {
+.grid-item:not(:nth-child(1)):hover {
   cursor: pointer;
   .card-details {
     background-color: hsl(235, 42%, 53%);
@@ -73,11 +62,24 @@ p {
   padding-inline: 2rem;
 }
 .card-details {
-  margin: 0;
-  padding: 0;
-  border-radius: 5%;
+  border-radius: 1rem;
   background-color: hsl(235, 46%, 20%);
   padding: 2rem;
+}
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  h3 {
+  margin-bottom: 0rem;
+  }
+}
+.dots {
+  height: 0.4rem;
+  align-self: center;
+}
+.dots:hover {
+  filter: invert(20%) sepia(78%) saturate(0%) brightness(150%) hue-rotate(300deg) contrast(85%);
 }
 .option {
   color: hsl(235, 45%, 61%);
@@ -90,26 +92,24 @@ p {
 .active {
   color: white;
 }
-.item1 {
+.grid-item:nth-child(1) {
   grid-row: span 2;
   background-color: hsl(235, 46%, 20%);
-  margin: 0;
-  padding: 0;
   display: flex;
   align-self: flex-end;
   height: 100%;
-}
-.item1 h3 {
-  font-weight: 300;
-}
-.item1 .card-details {
-  background-color: hsl(246, 80%, 60%);
-  flex: 1;
-}
-.item1 > .card-background {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  height: fit-content;
+  h3 {
+    font-weight: 300;
+  }
+  .card-details {
+    background-color: hsl(246, 80%, 60%);
+    flex: 1;
+  }
+  > .card-background {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    height: fit-content;
+  }
 }
 .avatar {
   height: 5rem;
@@ -118,7 +118,6 @@ p {
   border-radius: 50%;
   margin-bottom: 2rem;
 }
-
 @media (max-width: 980px) {
   body {
     height: auto;
@@ -128,10 +127,90 @@ p {
   .grid-container {
     grid-template-columns: repeat(2, 1fr);
   }
+  h1 {
+    font-size: 44px;
+  }
+  h2 {
+    font-size: 30px;
+  }
 }
-
 @media (max-width: 600px) {
   .grid-container {
     grid-template-columns: repeat(1, 1fr);
+  }
+  h1, h2, h3, p {
+    margin: 0;
+  }
+  h2 {
+    font-size: 28px;
+  }
+  h3 {
+    font-size: 24px;
+  }
+  p {
+    font-size: 16px;
+  }
+  .card-details {
+    padding: 1.5rem;
+  }
+  .grid-item:nth-child(1) {
+    grid-row: 1;
+    .card-details {
+      flex: 1;
+      display: grid;
+      grid-template-columns: 1fr 3fr;
+      column-gap: 1rem;
+      padding: auto;
+      p {
+        margin-bottom: 0;
+        margin-top: 1rem;
+      }
+      h2 {
+        margin-bottom: 0;
+      }
+    }
+    > .card-background {
+      padding: auto;
+      height: fit-content;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 1rem;
+      h3 {
+        margin-bottom: 0;
+        text-align: center;
+      }
+    }
+  }
+  .avatar {
+    height: 6rem;
+    grid-row: span 2;
+    margin-bottom: 0;
+  }
+  .card-time {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 0.5rem;
+  }
+}
+@media (max-width: 390px) {
+  .grid-container {
+    padding-inline: 0.5rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .grid-item {
+    width: 100%;
+  }
+  .grid-item:nth-child(1) {
+    display: flex;
+    flex-wrap: wrap;
+    .card-details {
+      padding-inline: 0.5rem;
+    }
+    .card-background {
+      padding-inline: 0.5rem;
+      gap: 0.5rem;
+    }
   }
 }
